Fixed menu z-index

--- a/content/themes/twolittlenomads/assets/css/screen.css
+++ b/content/themes/twolittlenomads/assets/css/screen.css
@@ -522,11 +522,10 @@ body.nav-opened .site-wrapper {
 }
 
 .main-nav {
-    position: relative;
     position: fixed;
     top: 20px;
     right: 20px;
-    
+    z-index: 100;
 }
 
 .main-nav a {
